# projects

./: .bazelrc  .clang-tidy  MODULE.bazel  PROGRESS.md  WORKSPACE
autocthon/: README.md  main.cc  makefile  program.atn
autocthon/src/: endian.hpp  opcode.hpp  program.cpp  program.hpp
euler/: BUILD.bazel  p1.py  p2.py
systemb/: .bazelrc
systemb/bdig/: BUILD  README.md  bdig.c  libbdig.c  libbdig.h  libbdig_fuzz.cpp  libbdig_test.cpp  makefile
systemb/brp/: BUILD  README.md  brp.lua  brp_client.c  client.cpp  libbrp.cpp  libbrp.hpp  middleman.c  test.c
